test/scc_test/decl/semantic-errors/028.t
struct A
{
    int a : 0;
};